# SO1_1S2024_202109567

./: .gitignore  README.md  package-lock.json
HTS/HT_1/: main.go  readme.md
Proyecto1/: db.sql  docker-compose.yaml  nginx.conf  readme.md
Proyecto1/backend/: Dockerfile  go.mod  go.sum  main.go
Proyecto1/db/: db.sql  docker-compose.yaml  set.md
Proyecto1/frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json
Proyecto1/test/: ram.c
Proyecto2/: .gitignore  conferencia-kafka.md  documentacion.md  extra.md  readme.md
Proyecto2/api/: Dockerfile  package-lock.json  package.json  readme.md
Proyecto2/consumer/: Dockerfile  go.mod  go.sum  main.go  reamde.md
Proyecto2/frontent/: Dockerfile  README.md  app.vue  package-lock.json
Proyecto2/kubernetes/: Ingress.yaml  consumer.yaml  grafana.yaml  grcp.yaml  grpc.yaml  hpa.yaml  kafka.yaml  mongo-deployment.yaml  mongo-service.yaml  mongo.yaml  policy.yaml  readme.md  redis-deployment.yaml  redis-service.yaml  redis.yaml  wasm.yaml
Proyecto2/locust/: main.py  traffic.json
Proyecto2/producers/wasm/: Cargo.toml  Dockerfile  readme.md
Proyecto2/producers/wasm/client/: Cargo.toml
Proyecto2/producers/wasm/client/src/: main.rs
Proyecto2/producers/wasm/kubernetes/: deploymen.yaml  service.yaml
Proyecto2/producers/wasm/server/: Cargo.toml  Dockerfile
Proyecto2/producers/wasm/server/src/: main.rs
Proyecto2/producers/wasm/src/: main.rs
Tareas/Tarea_1/: readme.md
Tareas/Tarea_2/: docker-compose.yaml  readme.md
Tareas/Tarea_3/: readme.md
Tareas/Tarea_4/: readme.md  script.sql  (+1 more)
(+85 files in other folders)
