[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
axum = "0.7.5"
serde = { version = "1.0.198", features = ["derive"] }
hyper =  { version = "1.3.1", features = ["full"] }
rdkafka = { version = "0.36.2", features = ["cmake-build"] }
serde_json = "1.0.116"
